test_regress/t/t_config_hier.out
%Error-UNSUPPORTED: t/t_config_hier.v:36:3: Unsupported: config inst use rule
   36 |   instance t.u_1 use work.cfg2 :config;
      |   ^~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_config_hier.v:41:3: Unsupported: config inst use rule
   41 |   instance t.u_1 use cfg2 :config;
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_hier.v:62:3: Unsupported: config inst use rule
   62 |   instance u_bb use work.c2_bb;
      |   ^~~~~~~~
%Error: Exiting due to
